添加用户自定义头像功能，优化UI显示

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.7.0.jar=H:\\j2ee\\\u9879\u76ee\\commons-beanutils-1.7.0.jar
 file.reference.commons-collections-3.2.jar=H:\\j2ee\\\u9879\u76ee\\commons-collections-3.2.jar
@@ -83,7 +84,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
