--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>Feedback</servlet-name>
         <servlet-class>serv.Feedback</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UploadImg</servlet-name>
+        <servlet-class>serv.UploadImg</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -56,6 +60,10 @@
     <servlet-mapping>
         <servlet-name>Feedback</servlet-name>
         <url-pattern>/Feedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadImg</servlet-name>
+        <url-pattern>/UploadImg</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
