--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>UploadImg</servlet-name>
         <servlet-class>serv.UploadImg</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>readAllMsg</servlet-name>
+        <servlet-class>serv.readAllMsg</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -64,6 +68,10 @@
     <servlet-mapping>
         <servlet-name>UploadImg</servlet-name>
         <url-pattern>/UploadImg</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>readAllMsg</servlet-name>
+        <url-pattern>/readAllMsg</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
